--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 	<link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+
+<!--navigation starting-->
 <nav id="nav">
 	<div class="container">
 	<div class="brand-logo">
 		<div>
-			<a href="index.html"><i class="fa fa-grav logo" aria-hidden="true"></i></a>
+			<a href="index.html"><i class="fa fa-grav logo" aria-hidden="true"></i></a>  <!--brand logo here-->
 		</div>
 	</div>
 	<div class="menu">
 		<ul>
-			<li id="menu1">Menu Item</li>
+			<li id="menu1">Menu Item</li>		<!--menu items-->
 			<li id="menu2">Menu Item</li>
 			<li id="menu3">Menu Item</li>
 			<li id="menu4">Menu Item</li>	
@@ -26,7 +28,7 @@
 	</div>
 	</div>
 	
-<!--	first curtain-->
+<!--	first Curtain--> <!--	first Curtain--> <!--	first Curtain-->
 
 	<div class="curtain">
 		<div class="container">
@@ -71,7 +73,8 @@
 		</div>					
 	</div>
 	
-<!--	second curtain-->
+<!--	second curtain--> <!--	second curtain--> <!--	second curtain-->
+
 	<div class="curtain-2">
 		<div class="container">		
 			<div class="submenu">
@@ -115,7 +118,7 @@
 		</div>					
 	</div>
 		
-<!-- third curtain	-->
+<!-- third curtain	--> <!-- third curtain	--> <!-- third curtain	-->
 	
 	<div class="curtain-3">
 		<div class="container">		
@@ -161,7 +164,7 @@
 		</div>					
 	</div>
 	
-<!--	forth curtain -->
+<!--	forth curtain --> <!--	forth curtain --> <!--	forth curtain -->
 								
 	<div class="curtain-4">
 		<div class="container">		
@@ -210,6 +213,7 @@
 	</div>							
 									
 </nav>
+
 <script type="text/javascript" src="./assets/js/jq/jquery-3.2.1.min.js"></script>
 <script type="text/javascript" src="./assets/js/my.js"></script>
 </body>
